Testing to fix scroll on iPhone

--- a/style.css
+++ b/style.css
@@ -161,8 +161,20 @@ hr.main {
 
 }
 
-select, option {
-  -webkit-appearance: none;
+select {
+
+-webkit-appearance: none;
+-moz-appearance: none;
+appearance: none;
+
+-moz-border-radius: 3px;
+-webkit-border-radius: 3px;
+border-radius: 3px;
+background: url(http://dropdown/arrow/url/) no-repeat;
+background-position: right center;
+background-color: #CCCCCC;
+color: #000000;
+border: 1px solid #000000;
 }
 
 .dropdown-toggle, #searchButton {
